Fixed alignment issues.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,6 @@
 @import "bootstrap";
 
-#content{
-	width: 960px;
-	margin: auto;
-}
+
 
 body{
 	margin:0 !important;
@@ -17,6 +14,10 @@ h1{
 .spacer{
 	width:100%;
 	height: 72px;
+}
+
+.col-2{
+	padding: 0;
 }
 
 #notice{
@@ -47,8 +48,8 @@ button#sidebarCollapse{
 
 #sidebar{
 	height: 100vh;
-	width: 200px;
 	float: left;
+	width: 16.67%;
 	position: fixed;
 	overflow-y: auto;
 	padding-top: 72px !important;
